--- a/css/kjeld.css
+++ b/css/kjeld.css
@@ -1,3 +1,12 @@
+/*
+Theme Name: Kjelds Cykler
+Theme URI: http://kjeldscykler.com/
+Author: Stefan Bernkilde, Jakob Bach Nielsen, Anders Strange Lassen, Christoffer Frier-Meineche
+Author URI:
+Description: Retro theme developed for Kjelds Cykler
+Version: 0.1
+Tags: retro, bike, bicycle, shop
+*/
 
 h1 {
         color:red;
