--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
 /* CSS Document */
 
 /*
-Theme Name: Kjelds Cykler Theme
-Author: Jakob Nielsen
-Author URL: http://jbnmmd.dk
-Description: A theme for my project
+Theme Name: Kjelds Cykler
+Author: Stefan Bernkilde, Jakob Bach Nielsen, Anders Strange Lassen, Christoffer Frier-Meineche
+Description: Retro theme developed for Kjelds Cykler
 Version: 0.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Tags: retro, bike, bicycle, shop
 */
