--- a/css/kjeld.css
+++ b/css/kjeld.css
@@ -1,13 +1,110 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
+p{
+  color: black;
+}
 
-h1 {
-        color:red;
-        }
+main {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-auto-rows: auto;
+  overflow: hidden;
+}
 
-body {
-        background-color:purple;
-        }
+section{
+  grid-column: 1 / 13;
+}
 
-p {
-        color:yellow;
-        }
+#menu{
+  background-color: blue;
+  height: 100px;
+}
+
+#header{
+  background-color: green;
+  height: 500px;
+}
+
+#spotlight{
+  background-color: orange;
+  height: 500px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+#values{
+  background-color: pink;
+  height: 400px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+#personal{
+  background-color: yellow;
+  height: 800px;
+}
+
+.info{
+  height: 400px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.videos{
+  height: 300px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.fb-link{
+  grid-template-columns: repeat(1, 1fr);
+}
+
+#instagram{
+  background-color: red;
+  height: 800px;
+}
+
+.insta-feed{
+  height: 700px;
+  grid-template-columns: repeat(1, 1fr);
+}
+
+.insta-btn{
+  grid-template-columns: repeat(1, 1fr);
+}
+
+footer{
+  height: 200px;
+  background-color: cyan;
+  grid-column: 1 / 13;
+}
+
+/* -------------------- TABLET MEDIA QUERY -------------------- */
+
+@media only screen and (max-width: 1068px) {
+  #spotlight{
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* -------------------- MOBILE MEDIA QUERY -------------------- */
+
+@media only screen and (max-width: 735px) {
+  #spotlight{
+    grid-template-columns: repeat(1, 1fr);
+  }
+  #values{
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .info{
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .videos{
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
