--- a/css/kjeld.css
+++ b/css/kjeld.css
@@ -17,6 +17,20 @@ main {
 
 section{
   grid-column: 1 / 13;
+  background-color: yellow;
+}
+
+.products{
+  list-style-type: none;
+}
+
+.products li{
+  width: 25%;
+  display: block;
+  margin: 0;
+  padding: 0;
+  float: left;
+
 }
 
 #menu{
@@ -24,9 +38,18 @@ section{
   height: 100px;
 }
 
-#header{
+.main-content{
+  grid-column: 1 / 13;
+  background-color: pink;
+}
+
+#banner{
   background-color: green;
   height: 500px;
+}
+
+#header .primary-menu ul {
+
 }
 
 #spotlight{
