--- a/css/kjeld.css
+++ b/css/kjeld.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+body{
+  font-family: 'Leckerli One', sans-serif;
+  font-size: 16px;
+}
+
 p{
   color: black;
 }
@@ -30,12 +35,63 @@ section{
   margin: 0;
   padding: 0;
   float: left;
+}
 
+.logo{
+  width: 250px;
+  height: auto;
+  margin: 0 auto;
+  position: relative;
+}
+
+.logo img{
+  width: 200px;
+  height: auto;
 }
 
 #menu{
-  background-color: blue;
-  height: 100px;
+  background-image: url('../media/banner.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 1200px;
+  margin: 0 auto;
+}
+
+#menu-header-navigation{
+  list-style-type: none;
+  margin: 30px auto 0 auto;
+  width: 80%;
+
+}
+
+#menu-header-navigation li{
+  float: left;
+}
+
+#menu-header-navigation li a{
+  display: inline-block;
+  color: #F2D491;
+  text-align: center;
+  padding: 5px 55px;
+  font-size: 1.4em;
+  text-decoration: none;
+  transition: 0.3s ease-in-out all;
+}
+
+#menu-header-navigation li:nth-child(2){
+  padding-right: 240px;
+}
+
+#menu-header-navigation li a:hover{
+  color: #D58800;
+}
+
+header{
+  grid-column: 1 / 13;
+  grid-row-start: 1;
+  grid-row-end: 1;
+  z-index: 2;
 }
 
 .main-content{
@@ -43,9 +99,24 @@ section{
   background-color: pink;
 }
 
+#main{
+  width: 1200px;
+  margin: 0 auto;
+}
+
 #banner{
-  background-color: green;
-  height: 500px;
+  grid-column: 1 / 13;
+  background-color: #415879;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  background-image: url(https://images.designtrends.com/wp-content/uploads/2015/12/03063020/Feature-Image.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  z-index: 1;
+}
+
+.products li{
 }
 
 #header .primary-menu ul {
